# app/src/swagger_output.json
@@ -345,6 +345,59 @@
           }
         ]
       }
+    },
+    "/accounts/profile": {
+      "put": {
+        "tags": [
+          "Account"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/accountSchema"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/profileInSchema"
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -460,6 +513,23 @@
               "type": "string",
               "example": "yyyy-mm-dd"
             }
+          }
+        }
+      },
+      "profileInSchema": {
+        "type": "object",
+        "properties": {
+          "fullName": {
+            "type": "string",
+            "example": "John Doe"
+          },
+          "bio": {
+            "type": "string",
+            "example": "I am Human"
+          },
+          "avatarUrl": {
+            "type": "string",
+            "example": "/default-user.png"
           }
         }
       }
